# freshl

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  clippy.toml  lefthook.yml  rust-toolchain.toml
.github/: renovate.json5
.github/workflows/: ci.yaml  publish.yml
docs/: comparison.md  edge-cases.md  plan.md
src/: args.rs  case.rs  collect.rs  entry.rs  error.rs  git.rs  lib.rs  main.rs  owner.rs  sort.rs
src/format/: git_col.rs  mod.rs  name.rs  palette.rs  perms.rs  size.rs  time.rs
tests/: differential_git.rs  gaps.rs  integration.rs  properties.rs  sort_properties.rs
