[package]
name = "freshl"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Modern ls replacement with git awareness and ISO 8601 UTC timestamps"
publish = false
repository = "https://github.com/shields/freshl"
keywords = ["cli", "ls", "filesystem", "git"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anstream = "1"
anstyle = "1"
jiff = "0.2"
uzers = "0.12"

[dependencies.gix]
version = "0.83"
default-features = false
features = [
    "status",
    "index",
    "worktree-mutation",
    "excludes",
    "max-performance-safe",
    "sha1",
]

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple-crate-versions = "allow"
