# Copyright © 2026 Michael Shields
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "freshl"
edition = "2024"
rust-version = "1.95"
description = "Modern ls replacement with git awareness and ISO 8601 UTC timestamps"
publish = false
repository = "https://github.com/shields/freshl"
keywords = ["cli", "ls", "filesystem", "git"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anstream = "1"
anstyle = "1"
jiff = "0.2"
lscolors = { version = "0.21.0", default-features = false }
rustix = { version = "1", default-features = false, features = ["process", "fs"] }
uzers = "0.12"

[dependencies.gix]
version = "0.83"
default-features = false
features = [
    "status",
    "index",
    "worktree-mutation",
    "excludes",
    "max-performance-safe",
    "sha1",
]

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple-crate-versions = "allow"
