# Copyright © 2026 Michael Shields
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "freshl"
edition = "2024"
rust-version = "1.95"
description = "Modern ls replacement with git awareness and ISO 8601 UTC timestamps"
publish = false
repository = "https://github.com/shields/freshl"
keywords = ["cli", "ls", "filesystem", "git"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
anstream = "1"
anstyle = "1"
jiff = "0.2"
lscolors = { version = "0.21.0", default-features = false }
rustix = { version = "1", default-features = false, features = ["process", "fs"] }
uzers = "0.12"

[dependencies.gix]
version = "0.83"
default-features = false
features = [
    "status",
    "index",
    "worktree-mutation",
    "excludes",
    "max-performance-safe",
    "sha1",
]

[dev-dependencies]
tempfile = "=3.27.0"

[lints.rust]
unsafe_code = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple-crate-versions = "allow"

# Restriction lints: opt in by name. Grouped per
# https://emschwartz.me/your-clippy-config-should-be-stricter/.
# Panic safety
string_slice                    = "deny"
indexing_slicing                = "deny"
unwrap_used                     = "deny"
panic                           = "deny"
todo                            = "deny"
unimplemented                   = "deny"
unreachable                     = "deny"
get_unwrap                      = "deny"
unwrap_in_result                = "deny"
panic_in_result_fn              = "deny"
unchecked_time_subtraction      = "deny"
# Silent-failure
unused_result_ok                = "deny"
map_err_ignore                  = "deny"
assertions_on_result_states     = "deny"
# Unsafe discipline (redundant with forbid(unsafe_code), kept for portability)
mem_forget                      = "deny"
undocumented_unsafe_blocks      = "deny"
multiple_unsafe_ops_per_block   = "deny"
unnecessary_safety_doc          = "deny"
unnecessary_safety_comment      = "deny"
# Numbers (the rest live in pedantic)
float_cmp_const                 = "deny"
lossy_float_literal             = "deny"
# Easy wins
dbg_macro                       = "deny"
infallible_try_from             = "deny"
clone_on_ref_ptr                = "deny"
verbose_file_reads              = "deny"
# Force every suppression to be deliberate + documented
allow_attributes                = "deny"
allow_attributes_without_reason = "deny"
